# realsense_motioncapture

./: CMakeLists.txt  README.md  package.xml
launch/: motion_capture.launch.py  motion_capture_offline.launch.py
src/: camera_publisher.cpp  depth_image_filter.cpp  image_filter.cpp  motion_capture.cpp
